human-intervention-logs/org.apache.maven.doxia:doxia-module-apt:1.1/gradle-test/gradle-test-2026-06-07T08-16-00-174705Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.apache.maven.doxia:doxia-module-apt:1.1
Command: `/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7030-31c15650/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7030-31c15650/tests/src/org.apache.maven.doxia/doxia-module-apt/1.1/src/test/java/org_apache_maven_doxia/doxia_module_apt/Doxia_module_aptTest.java:330: error: AptSink(Writer) has protected access in AptSink
> Task :compileTestJava FAILED
        AptSink sink = new AptSink(writer);
                       ^

/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7030-31c15650/tests/src/org.apache.maven.doxia/doxia-module-apt/1.1/src/test/java/org_apache_maven_doxia/doxia_module_apt/Doxia_module_aptTest.java:375: error: cannot find symbol
        assertThat(AptSink.encodeFragment("a b#c")).doesNotContain(" ");
                          ^
  symbol:   method encodeFragment(String)
  location: class AptSink
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7030-31c15650/tests/src/org.apache.maven.doxia/doxia-module-apt/1.1/src/test/java/org_apache_maven_doxia/doxia_module_apt/Doxia_module_aptTest.java:376: error: cannot find symbol
[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7030-31c15650/tests/src/org.apache.maven.doxia/doxia-module-apt/1.1/build/reports/problems/problems-report.html
        assertThat(AptSink.encodeURL("a b?c=d")).doesNotContain(" ");
                          ^
  symbol:   method encodeURL(String)
  location: class AptSink
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7030-31c15650/tests/src/org.apache.maven.doxia/doxia-module-apt/1.1/src/test/java/org_apache_maven_doxia/doxia_module_apt/Doxia_module_aptTest.java:330: error: AptSink(Writer) has protected access in AptSink
          AptSink sink = new AptSink(writer);
                         ^
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7030-31c15650/tests/src/org.apache.maven.doxia/doxia-module-apt/1.1/src/test/java/org_apache_maven_doxia/doxia_module_apt/Doxia_module_aptTest.java:375: error: cannot find symbol
          assertThat(AptSink.encodeFragment("a b#c")).doesNotContain(" ");
                            ^
    symbol:   method encodeFragment(String)
    location: class AptSink
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7030-31c15650/tests/src/org.apache.maven.doxia/doxia-module-apt/1.1/src/test/java/org_apache_maven_doxia/doxia_module_apt/Doxia_module_aptTest.java:376: error: cannot find symbol
          assertThat(AptSink.encodeURL("a b?c=d")).doesNotContain(" ");
                            ^
    symbol:   method encodeURL(String)
    location: class AptSink
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 7s

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
13 actionable tasks: 5 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7030-31c15650/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.apache.maven.doxia:doxia-module-apt:1.1 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 8s
9 actionable tasks: 1 executed, 8 up-to-date
